--- a/bio.html
+++ b/bio.html
@@ -63,29 +63,44 @@
 </main>
 
 <!-- <div id="butterfly"></div> -->
+<img src="eu.jpg" alt="Foto de João da Silva">
 
 <!-- nav = navigation -->
 <aside>
 	
-	<div>
-		
-		<h1>João da Silva</h1>
+	<h1>João da Silva</h1>
 
-		<nav>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="portifolio.html">Portifolio</a></li>
-				<li><a href="bio.html">Sobre Mim</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contato.html">Contato</a></li>
-			</ul>
-		</nav>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="portifolio.html">Portifolio</a></li>
+			<li><a href="bio.html">Sobre Mim</a></li>
+			<li><a href="blog.html">Blog</a></li>
+			<li><a href="contato.html">Contato</a></li>
+		</ul>
+	</nav>
 
-	</div>
+	<ul class="icones-sociais">
+		<li>
+			<a href="https://github.com/brunomorello">
+				<img src="github.png">
+			</a>
+		</li>
+		<li>
+			<a href="https://twitter.com/joaodasilva">
+				<img src="twitter.png">
+			</a>
+		</li>
+		<li>
+			<a href="https://linkedin.com/bruno-moreno">
+				<img src="linkedin.png">
+			</a>
+		</li>
+	</ul>
 
 </aside>
 
-<footer>
+<footer id="rodape-pagina">
 	&copy; João da Silva 2017
 </footer>
 
