basic layout finished

--- a/bio.html
+++ b/bio.html
@@ -31,16 +31,21 @@
 
 		<h2>Como trabalho</h2>
 
-		<blockquote>
+		<blockquote class="fiat">
 			<p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
 			<cite>José Souza, Fiat</cite>
 		</blockquote>
 		
 		<p>Criar soluções que atendam as necessidades dos clientes e que <em>agreguem</em> o devido valor ao negócio</p>
 
+		<p>Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo. Não trabalho com escopo fechado: o cliente é que decide quando o produto está pronto.</p>
+
+		<p>Também não trabalho com prazos fechados: qualidade é importante demais para ser sacrificada.</p>
+
+
 		<h2>Experiência</h2>
 
-		<blockquote>
+		<blockquote class="petrobras">
 			<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
 			<cite>Manuel Santos, Petrobras</cite>
 		</blockquote>
@@ -63,10 +68,10 @@
 </main>
 
 <!-- <div id="butterfly"></div> -->
-<img src="eu.jpg" alt="Foto de João da Silva">
+<img class="bio-joao-foto" src="eu.jpg" alt="Foto de João da Silva">
 
 <!-- nav = navigation -->
-<aside>
+<aside class="aside-nav-bio">
 	
 	<h1>João da Silva</h1>
 
@@ -82,18 +87,18 @@
 
 	<ul class="icones-sociais">
 		<li>
-			<a href="https://github.com/brunomorello">
-				<img src="github.png">
+			<a href="https://github.com/brunomorello" class="github">
+				Github
 			</a>
 		</li>
 		<li>
-			<a href="https://twitter.com/joaodasilva">
-				<img src="twitter.png">
+			<a href="https://twitter.com/joaodasilva" class="twitter">
+				Twitter
 			</a>
 		</li>
 		<li>
-			<a href="https://linkedin.com/bruno-moreno">
-				<img src="linkedin.png">
+			<a href="https://linkedin.com/bruno-moreno" class="linkedin">
+				Linkedin
 			</a>
 		</li>
 	</ul>
