Assets organized and it was added comments on css

--- a/bio.html
+++ b/bio.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>Biografia - João da Silva</title>
-	<link rel="icon" type="text/css" href="favicon.ico">
-	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="bio.css">
+	<link rel="icon" type="text/css" href="assets/images/favicon.ico">
+	<link rel="stylesheet" href="assets/stylesheets/reset.css">
+	<link rel="stylesheet" href="assets/stylesheets/bio.css">
 
 	<!-- Imports Google Font -->
 	<!-- carrega a fonte Crimson Text nas versões normal, itálico e negrito -->
@@ -68,7 +68,7 @@
 </main>
 
 <!-- <div id="butterfly"></div> -->
-<img class="bio-joao-foto" src="eu.jpg" alt="Foto de João da Silva">
+<img class="bio-joao-foto" src="assets/images/eu.jpg" alt="Foto de João da Silva">
 
 <!-- nav = navigation -->
 <aside class="aside-nav-bio">
