--- a/bio.html
+++ b/bio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Biografia - João da Silvaa</title>
+	<title>Biografia - João da Silva</title>
 	<link rel="icon" type="text/css" href="assets/images/favicon.ico">
 	<link rel="stylesheet" href="assets/stylesheets/reset.css">
 	<link rel="stylesheet" href="assets/stylesheets/bio.css">
